TransportationTypesFragment, HolidaysFragment, PaymentTypesFragment, SeasonsFragment,

--- a/app/src/main/res/layout/fragment_room_type.xml
+++ b/app/src/main/res/layout/fragment_room_type.xml
@@ -163,19 +163,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginHorizontal="10dp"
-                    android:layout_marginTop="10dp">
+                    android:paddingVertical="10dp">
 
                     <TextView
                         android:id="@+id/shortCode"
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/roboto"
+                        style="@style/listTextHeading"
                         android:text="Short Code"
-                        android:textColor="@color/item_light_heading"
-                        android:textSize="@dimen/H6"
-                        android:singleLine="true"
                         app:layout_constraintEnd_toStartOf="@id/propertyName"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -185,12 +181,8 @@
                         android:id="@+id/propertyName"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3"
+                        style="@style/listTextHeading"
                         android:text="Room Type"
-                        android:fontFamily="@font/roboto"
-                        android:textColor="@color/item_light_heading"
-                        android:textSize="@dimen/H6"
-                        android:singleLine="true"
                         android:layout_marginStart="5dp"
                         app:layout_constraintEnd_toStartOf="@id/guide1"
                         app:layout_constraintStart_toEndOf="@id/shortCode"
@@ -208,12 +200,8 @@
                         android:id="@+id/bedType"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/roboto"
+                        style="@style/listTextHeading"
                         android:text="Bed Type"
-                        android:textColor="@color/item_light_heading"
-                        android:textSize="@dimen/H6"
-                        android:singleLine="true"
                         android:layout_marginStart="5dp"
                         app:layout_constraintEnd_toStartOf="@id/adultChild"
                         app:layout_constraintStart_toEndOf="@id/guide1"
@@ -224,12 +212,8 @@
                         android:id="@+id/adultChild"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        style="@style/listTextHeading"
                         android:text="Adult &amp; Child"
-                        android:fontFamily="@font/roboto"
-                        android:textColor="@color/item_light_heading"
-                        android:textSize="@dimen/H6"
-                        android:singleLine="true"
                         android:layout_marginStart="5dp"
                         app:layout_constraintEnd_toStartOf="@id/maxOccupancy"
                         app:layout_constraintStart_toEndOf="@id/bedType"
@@ -240,12 +224,8 @@
                         android:id="@+id/maxOccupancy"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/roboto"
+                        style="@style/listTextHeading"
                         android:text="Max Occupancy"
-                        android:textColor="@color/item_light_heading"
-                        android:textSize="@dimen/H6"
-                        android:singleLine="true"
                         android:layout_marginStart="5dp"
                         app:layout_constraintEnd_toStartOf="@id/baseRate"
                         app:layout_constraintStart_toEndOf="@id/adultChild"
@@ -256,12 +236,8 @@
                         android:id="@+id/baseRate"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/roboto"
+                        style="@style/listTextHeading"
                         android:text="Base Rate"
-                        android:textColor="@color/item_light_heading"
-                        android:textSize="@dimen/H6"
-                        android:singleLine="true"
                         android:layout_marginStart="5dp"
                         app:layout_constraintEnd_toStartOf="@id/amenities"
                         app:layout_constraintStart_toEndOf="@id/maxOccupancy"
@@ -272,12 +248,8 @@
                         android:id="@+id/amenities"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/roboto"
+                        style="@style/listTextHeading"
                         android:text="Amenities"
-                        android:textColor="@color/item_light_heading"
-                        android:textSize="@dimen/H6"
-                        android:singleLine="true"
                         android:layout_marginStart="5dp"
                         app:layout_constraintEnd_toStartOf="@id/actions"
                         app:layout_constraintStart_toEndOf="@id/baseRate"
@@ -288,12 +260,8 @@
                         android:id="@+id/actions"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/roboto"
+                        style="@style/listTextHeading"
                         android:text="Actions"
-                        android:textColor="@color/item_light_heading"
-                        android:textSize="@dimen/H6"
-                        android:textAlignment="center"
-                        android:singleLine="true"
                         android:layout_marginStart="5dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/amenities"
@@ -301,6 +269,12 @@
                         app:layout_constraintTop_toTopOf="@id/shortCode"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/grey5"
+                    app:layout_constraintTop_toBottomOf="@id/propertyName"/>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/roomTypeRecycler"
