--- a/app/src/main/res/layout/fragment_transportation_types.xml
+++ b/app/src/main/res/layout/fragment_transportation_types.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".dashboard.configuration.reservation.ReservationTypeFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".dashboard.configuration.others.transportationTypes.TransportationTypesFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             android:id="@+id/aA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Reservation Types"
+            android:text="Transportation Types"
             android:fontFamily="@font/roboto_bold"
             android:textColor="@color/secondary"
             android:textSize="@dimen/H2"
@@ -203,7 +203,7 @@
                         android:layout_height="wrap_content"
                         style="@style/listTextHeading"
                         android:layout_marginStart="10dp"
-                        android:text="Reservation type name"
+                        android:text="Short Code"
                         app:layout_constraintEnd_toStartOf="@id/propertyName"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -214,7 +214,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         style="@style/listTextHeading"
-                        android:text="Status"
+                        android:text="Room Type Name"
                         app:layout_constraintStart_toStartOf="@id/guide1"
                         app:layout_constraintBottom_toBottomOf="@id/shortCode"
                         app:layout_constraintTop_toTopOf="@id/shortCode"/>
