--- a/app/src/main/res/layout/fragment_holidays.xml
+++ b/app/src/main/res/layout/fragment_holidays.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".dashboard.configuration.reservation.ReservationTypeFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".dashboard.configuration.others.HolidaysFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             android:id="@+id/aA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Reservation Types"
+            android:text="Holidays"
             android:fontFamily="@font/roboto_bold"
             android:textColor="@color/secondary"
             android:textSize="@dimen/H2"
@@ -168,19 +168,19 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        app:layout_constraintGuide_percent="0.21"/>
+                        app:layout_constraintGuide_percent="0.12"/>
                     <androidx.constraintlayout.widget.Guideline
                         android:id="@+id/guide2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        app:layout_constraintGuide_percent="0.38"/>
+                        app:layout_constraintGuide_percent="0.31"/>
                     <androidx.constraintlayout.widget.Guideline
                         android:id="@+id/guide3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        app:layout_constraintGuide_percent="0.62"/>
+                        app:layout_constraintGuide_percent="0.50"/>
                     <androidx.constraintlayout.widget.Guideline
                         android:id="@+id/guide4"
                         android:layout_width="wrap_content"
@@ -203,42 +203,69 @@
                         android:layout_height="wrap_content"
                         style="@style/listTextHeading"
                         android:layout_marginStart="10dp"
-                        android:text="Reservation type name"
-                        app:layout_constraintEnd_toStartOf="@id/propertyName"
+                        android:text="Short Code"
+                        app:layout_constraintEnd_toStartOf="@id/text2"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toEndOf="@id/switch_all"/>
 
                     <TextView
-                        android:id="@+id/propertyName"
+                        android:id="@+id/text2"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         style="@style/listTextHeading"
-                        android:text="Status"
+                        android:text="Holiday Name"
+                        app:layout_constraintEnd_toEndOf="@id/guide2"
                         app:layout_constraintStart_toStartOf="@id/guide1"
                         app:layout_constraintBottom_toBottomOf="@id/shortCode"
                         app:layout_constraintTop_toTopOf="@id/shortCode"/>
 
 
                     <TextView
-                        android:id="@+id/bedType"
+                        android:id="@+id/text3"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         style="@style/listTextHeading"
-                        android:text="Created By"
+                        android:text="Start Date"
                         android:layout_marginStart="5dp"
+                        app:layout_constraintEnd_toStartOf="@id/text4"
                         app:layout_constraintStart_toStartOf="@id/guide2"
                         app:layout_constraintBottom_toBottomOf="@id/shortCode"
                         app:layout_constraintTop_toTopOf="@id/shortCode"/>
 
                     <TextView
-                        android:id="@+id/adultChild"
+                        android:id="@+id/text4"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        style="@style/listTextHeading"
+                        android:text="End Date"
+                        android:layout_marginStart="5dp"
+                        app:layout_constraintStart_toEndOf="@id/text3"
+                        app:layout_constraintEnd_toStartOf="@id/guide3"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+                    <TextView
+                        android:id="@+id/text5"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        style="@style/listTextHeading"
+                        android:text="Created By"
+                        android:layout_marginStart="5dp"
+                        app:layout_constraintEnd_toStartOf="@id/text6"
+                        app:layout_constraintStart_toStartOf="@id/guide3"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+                    <TextView
+                        android:id="@+id/text6"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         style="@style/listTextHeading"
                         android:text="Last Modified"
                         android:layout_marginStart="5dp"
-                        app:layout_constraintStart_toStartOf="@id/guide3"
+                        app:layout_constraintStart_toEndOf="@id/text5"
+                        app:layout_constraintEnd_toStartOf="@id/guide4"
                         app:layout_constraintBottom_toBottomOf="@id/shortCode"
                         app:layout_constraintTop_toTopOf="@id/shortCode"/>
 
@@ -251,17 +278,24 @@
                         android:text="Actions"
                         android:textAlignment="center"
                         android:layout_marginStart="16dp"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@id/guide4"
                         app:layout_constraintBottom_toBottomOf="@id/shortCode"
                         app:layout_constraintTop_toTopOf="@id/shortCode"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/grey5"
+                    app:layout_constraintTop_toBottomOf="@id/propertyName"/>
+
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/reservationTypeRecycler"
+                    android:id="@+id/paymentTypeRecycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    tools:listitem="@layout/item_reservation_types"/>
+                    tools:listitem="@layout/item_holidays"/>
 
             </LinearLayout>
 
