--- a/app/src/main/res/layout/fragment_payment_types.xml
+++ b/app/src/main/res/layout/fragment_payment_types.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".dashboard.configuration.RoomsTimelineFragment">
+    tools:context=".dashboard.configuration.billings.PaymentTypesFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             android:id="@+id/aA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Stay View"
+            android:text="Payment Types"
             android:fontFamily="@font/roboto_bold"
             android:textColor="@color/secondary"
             android:textSize="@dimen/H2"
@@ -26,7 +26,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/addNewProperty"
+            android:id="@+id/createNewBtn"
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:layout_marginEnd="20dp"
@@ -41,7 +41,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="+  Add New Property"
+                android:text="+  Create New"
                 android:layout_gravity="center"
                 android:fontFamily="@font/roboto_bold"
                 android:textSize="@dimen/H5"
@@ -83,7 +83,6 @@
             android:gravity="center_vertical"
             app:layout_constraintHorizontal_bias="0.02"
             app:layout_constraintTop_toTopOf="@id/searchCard"
-            app:layout_constraintEnd_toStartOf="@id/llView"
             app:layout_constraintBottom_toBottomOf="@id/searchCard"
             app:layout_constraintStart_toEndOf="@id/searchCard">
 
@@ -137,35 +136,6 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/llView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginEnd="10dp"
-            android:gravity="center"
-            app:layout_constraintTop_toTopOf="@id/ll5"
-            app:layout_constraintBottom_toBottomOf="@id/ll5"
-            app:layout_constraintEnd_toEndOf="@id/addNewProperty">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="View"
-                android:textSize="@dimen/H4"
-                android:layout_marginHorizontal="5dp"
-                android:textColor="@color/secondary"
-                android:fontFamily="@font/roboto"/>
-
-            <ImageView
-                android:id="@+id/viewTypeIcon"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:scaleType="fitXY"
-                android:layout_marginHorizontal="2dp"
-                android:src="@drawable/svg_view_type"/>
-
-        </LinearLayout>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/allProp"
@@ -173,10 +143,11 @@
             android:layout_height="0dp"
             style="@style/CardViewTheme"
             android:layout_marginVertical="20dp"
+            android:visibility="visible"
             app:cardCornerRadius="16dp"
             app:cardElevation="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/llView"
+            app:layout_constraintEnd_toEndOf="@id/createNewBtn"
             app:layout_constraintStart_toStartOf="@id/searchCard"
             app:layout_constraintTop_toBottomOf="@id/searchCard">
 
@@ -187,41 +158,130 @@
                 android:orientation="vertical">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/items_linear"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                    <LinearLayout
-                        android:id="@+id/static_calender_layout"
-                        android:layout_width="200dp"
-                        android:layout_height="50dp"
-                        android:orientation="horizontal"
-                        android:gravity="center"
-                        android:padding="10dp"
-                        android:layout_marginTop="5dp"
-                        app:layout_constraintTop_toTopOf="parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="10dp"
+                    android:paddingVertical="10dp">
+                    <androidx.constraintlayout.widget.Guideline
+                        android:id="@+id/guide1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        app:layout_constraintGuide_percent="0.12"/>
+                    <androidx.constraintlayout.widget.Guideline
+                        android:id="@+id/guide2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        app:layout_constraintGuide_percent="0.35"/>
+                    <androidx.constraintlayout.widget.Guideline
+                        android:id="@+id/guide3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        app:layout_constraintGuide_percent="0.50"/>
+                    <androidx.constraintlayout.widget.Guideline
+                        android:id="@+id/guide4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        app:layout_constraintGuide_percent="0.87"/>
+                    <CheckBox
+                        android:id="@+id/switch_all"
+                        android:layout_width="19dp"
+                        android:layout_height="19dp"
+                        app:layout_constraintEnd_toStartOf="@id/shortCode"
                         app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"/>
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/calender_recycler"
+
+                    <TextView
+                        android:id="@+id/shortCode"
                         android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        android:orientation="horizontal"
-                        tools:listitem="@layout/item_calender_view"
+                        android:layout_height="wrap_content"
+                        style="@style/listTextHeading"
+                        android:layout_marginStart="10dp"
+                        android:text="Short Code"
+                        app:layout_constraintEnd_toStartOf="@id/propertyName"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/switch_all"/>
+
+                    <TextView
+                        android:id="@+id/propertyName"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        style="@style/listTextHeading"
+                        android:text="Payment Type"
+                        app:layout_constraintStart_toStartOf="@id/guide1"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+
+                    <TextView
+                        android:id="@+id/bedType"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        style="@style/listTextHeading"
+                        android:text="Received to"
+                        android:layout_marginStart="5dp"
+                        app:layout_constraintStart_toStartOf="@id/guide2"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+                    <TextView
+                        android:id="@+id/adultChild"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        style="@style/listTextHeading"
+                        android:text="Created By"
+                        android:layout_marginStart="5dp"
+                        app:layout_constraintEnd_toStartOf="@id/lastModified"
+                        app:layout_constraintStart_toStartOf="@id/guide3"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+                    <TextView
+                        android:id="@+id/lastModified"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        style="@style/listTextHeading"
+                        android:text="Last Modified"
+                        android:layout_marginStart="5dp"
+                        app:layout_constraintStart_toEndOf="@id/adultChild"
+                        app:layout_constraintEnd_toStartOf="@id/actions"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
+
+
+                    <TextView
+                        android:id="@+id/actions"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        style="@style/listTextHeading"
+                        android:text="Actions"
+                        android:textAlignment="center"
+                        android:layout_marginStart="16dp"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="@id/static_calender_layout"
-                        app:layout_constraintBottom_toBottomOf="@id/static_calender_layout"
-                        app:layout_constraintStart_toEndOf="@id/static_calender_layout"/>
+                        app:layout_constraintStart_toStartOf="@id/guide4"
+                        app:layout_constraintBottom_toBottomOf="@id/shortCode"
+                        app:layout_constraintTop_toTopOf="@id/shortCode"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/grey5"
+                    app:layout_constraintTop_toBottomOf="@id/propertyName"/>
+
                 <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/paymentTypeRecycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    />
+                    tools:listitem="@layout/item_payment_type"/>
 
             </LinearLayout>
 
@@ -229,4 +289,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.core.widget.NestedScrollView>
+</LinearLayout>
