--- a/app/src/main/res/layout/fragment_view_properties.xml
+++ b/app/src/main/res/layout/fragment_view_properties.xml
@@ -191,20 +191,16 @@
                     android:id="@+id/items_linear"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginHorizontal="10dp"
-                    android:layout_marginTop="10dp">
+                    android:layout_marginEnd="10dp"
+                    android:paddingVertical="10dp">
 
                     <TextView
                         android:id="@+id/hCode"
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/roboto"
+                        style="@style/listTextHeading"
                         android:text="H-Code"
-                        android:textColor="@color/item_light_heading"
-                        android:textSize="@dimen/H6"
-                        android:singleLine="true"
+                        android:layout_marginStart="10dp"
                         app:layout_constraintEnd_toStartOf="@id/propertyName"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -214,12 +210,8 @@
                         android:id="@+id/propertyName"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3"
+                        style="@style/listTextHeading"
                         android:text="Property Name"
-                        android:fontFamily="@font/roboto"
-                        android:textColor="@color/item_light_heading"
-                        android:textSize="@dimen/H6"
-                        android:singleLine="true"
                         android:layout_marginStart="5dp"
                         app:layout_constraintEnd_toStartOf="@id/guide1"
                         app:layout_constraintStart_toEndOf="@id/hCode"
@@ -231,19 +223,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        app:layout_constraintGuide_percent="0.28"/>
+                        app:layout_constraintGuide_percent="0.29"/>
 
                     <TextView
                         android:id="@+id/propertyType"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/roboto"
+                        style="@style/listTextHeading"
                         android:text="Property Type"
-                        android:textColor="@color/item_light_heading"
-                        android:textSize="@dimen/H6"
-                        android:singleLine="true"
-                        android:layout_marginStart="5dp"
                         app:layout_constraintEnd_toStartOf="@id/location"
                         app:layout_constraintStart_toEndOf="@id/guide1"
                         app:layout_constraintBottom_toBottomOf="@id/hCode"
@@ -253,12 +240,8 @@
                         android:id="@+id/location"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        style="@style/listTextHeading"
                         android:text="Location"
-                        android:fontFamily="@font/roboto"
-                        android:textColor="@color/item_light_heading"
-                        android:textSize="@dimen/H6"
-                        android:singleLine="true"
                         android:layout_marginStart="5dp"
                         app:layout_constraintEnd_toStartOf="@id/occupancy"
                         app:layout_constraintStart_toEndOf="@id/propertyType"
@@ -269,12 +252,8 @@
                         android:id="@+id/occupancy"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/roboto"
+                        style="@style/listTextHeading"
                         android:text="Occupancy"
-                        android:textColor="@color/item_light_heading"
-                        android:textSize="@dimen/H6"
-                        android:singleLine="true"
                         android:layout_marginStart="5dp"
                         app:layout_constraintEnd_toStartOf="@id/totalRooms"
                         app:layout_constraintStart_toEndOf="@id/location"
@@ -285,12 +264,8 @@
                         android:id="@+id/totalRooms"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/roboto"
+                        style="@style/listTextHeading"
                         android:text="Total Rooms"
-                        android:textColor="@color/item_light_heading"
-                        android:textSize="@dimen/H6"
-                        android:singleLine="true"
                         android:layout_marginStart="5dp"
                         app:layout_constraintEnd_toStartOf="@id/amenities"
                         app:layout_constraintStart_toEndOf="@id/occupancy"
@@ -301,12 +276,8 @@
                         android:id="@+id/amenities"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/roboto"
+                        style="@style/listTextHeading"
                         android:text="Amenities"
-                        android:textColor="@color/item_light_heading"
-                        android:textSize="@dimen/H6"
-                        android:singleLine="true"
                         android:layout_marginStart="5dp"
                         app:layout_constraintEnd_toStartOf="@id/status"
                         app:layout_constraintStart_toEndOf="@id/totalRooms"
@@ -317,12 +288,8 @@
                         android:id="@+id/status"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/roboto"
+                        style="@style/listTextHeading"
                         android:text="Status"
-                        android:textColor="@color/item_light_heading"
-                        android:textSize="@dimen/H6"
-                        android:singleLine="true"
                         android:layout_marginStart="5dp"
                         app:layout_constraintEnd_toStartOf="@id/actions"
                         app:layout_constraintStart_toEndOf="@id/amenities"
@@ -333,12 +300,9 @@
                         android:id="@+id/actions"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/roboto"
+                        style="@style/listTextHeading"
                         android:text="Actions"
-                        android:textColor="@color/item_light_heading"
-                        android:textSize="@dimen/H6"
                         android:textAlignment="center"
-                        android:singleLine="true"
                         android:layout_marginStart="5dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/status"
@@ -347,11 +311,18 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/grey5"
+                    android:layout_marginHorizontal="10dp"
+                    app:layout_constraintTop_toBottomOf="@id/propertyName"/>
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/allRecycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    tools:listitem="@layout/item_properties_3" />
+                    tools:listitem="@layout/item_properties_3"/>
 
             </LinearLayout>
 
