--- a/app/src/main/res/layout/item_properties_3.xml
+++ b/app/src/main/res/layout/item_properties_3.xml
@@ -4,25 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="10dp">
+        android:layout_marginHorizontal="10dp">
 
         <TextView
             android:id="@+id/hCode"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_weight="1"
-            android:fontFamily="@font/roboto"
+            style="@style/listText"
             android:text="H-Code"
-            android:textColor="@color/item_text"
-            android:textSize="@dimen/H6"
-            android:singleLine="true"
             app:layout_constraintEnd_toStartOf="@id/propertyName"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -32,12 +27,8 @@
             android:id="@+id/propertyName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
+            style="@style/listText"
             android:text="Property Name"
-            android:fontFamily="@font/roboto"
-            android:textColor="@color/item_text"
-            android:textSize="@dimen/H6"
-            android:singleLine="true"
             android:layout_marginStart="5dp"
             app:layout_constraintEnd_toStartOf="@id/guide1"
             app:layout_constraintStart_toEndOf="@id/hCode"
@@ -55,12 +46,8 @@
             android:id="@+id/propertyType"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/roboto"
+            style="@style/listText"
             android:text="Property Type"
-            android:textColor="@color/item_text"
-            android:textSize="@dimen/H6"
-            android:singleLine="true"
             android:layout_marginStart="5dp"
             app:layout_constraintEnd_toStartOf="@id/location"
             app:layout_constraintStart_toEndOf="@id/guide1"
@@ -71,12 +58,8 @@
             android:id="@+id/location"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            style="@style/listText"
             android:text="Location"
-            android:fontFamily="@font/roboto"
-            android:textColor="@color/item_text"
-            android:textSize="@dimen/H6"
-            android:singleLine="true"
             android:layout_marginStart="5dp"
             app:layout_constraintEnd_toStartOf="@id/occupancy"
             app:layout_constraintStart_toEndOf="@id/propertyType"
@@ -87,12 +70,8 @@
             android:id="@+id/occupancy"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/roboto"
+            style="@style/listText"
             android:text="Occupancy"
-            android:textColor="@color/item_text"
-            android:textSize="@dimen/H6"
-            android:singleLine="true"
             android:layout_marginStart="5dp"
             app:layout_constraintEnd_toStartOf="@id/totalRooms"
             app:layout_constraintStart_toEndOf="@id/location"
@@ -103,7 +82,6 @@
             android:id="@+id/totalRooms"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:orientation="horizontal"
             android:layout_marginStart="5dp"
             app:layout_constraintEnd_toStartOf="@id/amenities"
@@ -167,12 +145,8 @@
             android:id="@+id/status"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/roboto"
+            style="@style/listText"
             android:text="Status"
-            android:textColor="@color/item_text"
-            android:textSize="@dimen/H6"
-            android:singleLine="true"
             android:layout_marginStart="5dp"
             app:layout_constraintEnd_toStartOf="@id/actions"
             app:layout_constraintStart_toEndOf="@id/amenities"
@@ -214,5 +188,12 @@
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/grey5"
+        app:layout_constraintTop_toBottomOf="@id/propertyName"
+        android:layout_marginTop="9dp"/>
 
 </LinearLayout>
