--- a/app/src/main/res/layout/fragment_add_property_3.xml
+++ b/app/src/main/res/layout/fragment_add_property_3.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".dashboard.configuration.addPropertyFrags.AddPropertyFragment_3">
+    tools:context=".dashboard.configuration.roomsAndRates.addPropertyFrags.AddPropertyFragment_3">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
