--- a/app/src/main/res/layout/fragment_create_rate_plan.xml
+++ b/app/src/main/res/layout/fragment_create_rate_plan.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".dashboard.configuration.createRate.CreateRatePlanFragment">
+    tools:context=".dashboard.configuration.roomsAndRates.createRate.CreateRatePlanFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
