--- a/app/src/main/res/layout/fragment_create_rate_type.xml
+++ b/app/src/main/res/layout/fragment_create_rate_type.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fillViewport="true"
     android:background="@color/secondaryBackground"
-    tools:context=".dashboard.configuration.createRate.CreateRateTypeFragment">
+    tools:context=".dashboard.configuration.roomsAndRates.createRate.CreateRateTypeFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
