--- a/app/src/main/res/layout/fragment_rate_plan_details.xml
+++ b/app/src/main/res/layout/fragment_rate_plan_details.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".dashboard.configuration.createRate.RatePlanDetailsFragment">
+    tools:context=".dashboard.configuration.roomsAndRates.createRate.RatePlanDetailsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
